tests/invalid/simple/Void_CompileFail_2.whiley
void f(int x, void z):
    return
